--- a/public/css/stylenav.css
+++ b/public/css/stylenav.css
@@ -32,6 +32,7 @@ body{
 .tombol{
     text-transform: uppercase;
     font-size: 12px;
+    width: 100px;
     border-radius: 40px;
     margin-top: 5px;
 }
